--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="login_failed">"Login failed"</string>
     <string name="bienvenido">Bienvenido!</string>
     <string name="title_activity_autenticacion">Autenticacion</string>
+    <string name="juegos">Juegos</string>
+    <string name="musica">Musica</string>
+    <string name="ajustes">Ajustes</string>
 </resources>
